# python_fastapi

Challenge 1 - FastAPI CRUD API/: main.py  main0.py  main1.py  token_generator.py
Challenge 2 - Database Integration/: database.py  main.py  models.py  test_db.py
Challenge 3 - Async Programming/: main.py
Tracker - 1/: .env  .env.example  docker-compose.yml  main.py  (+1 more)
Tracker - 1 - postgressql/: .env.example  .gitignore  docker-compose.yml  main.py  requirements.txt
trackr/: .env  .env.example  main.py  pyproject.toml
trackr/api/v1/: router.py
trackr/core/config/: settings.py
trackr/core/db/: motor.py
trackr/core/exceptions/: base.py  handlers.py
trackr/core/middleware/: request_id.py
trackr/core/security/: jwt.py
trackr/modules/auth/: dependencies.py  exceptions.py  protocols.py  router.py
trackr/modules/auth/adapters/: mongo.py
trackr/modules/auth/schemas/: requests.py  responses.py
trackr/modules/auth/services/: login.py  logout.py
trackr/modules/companies/: exceptions.py  models.py  protocols.py
trackr/modules/companies/adapters/: mongo.py
trackr/modules/users/: exceptions.py  models.py  protocols.py
trackr/modules/users/adapters/: mongo.py
trackr/modules/users/schemas/: requests.py  responses.py
trackr/modules/users/services/: register.py
trackr/shared/: constants.py  enums.py  pagination.py  schemas.py
trackr/tests/: conftest.py
trackr/tests/test_auth/: test_login_router.py  test_login_service.py  test_logout_router.py  test_logout_service.py
trackr/tests/test_users/: test_register_router.py  test_register_service.py
(+125 files in other folders)
