[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackr"
version = "0.1.0"
description = "SaaS GPS tracking platform for marketing personnel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "motor>=3.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pydantic[email]>=2.7.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
